--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@
 
     .message h1 {
         font-style: normal;
-        font-size: 75px;
+        font-size: 55px;
         margin-bottom: 0;
         white-space: nowrap;
     }
 
     .message h2 {
         margin: 0;
-        font-size: 20px;
+        font-size: 10px;
         text-align: center;
         white-space: nowrap;
     }
@@ -1086,8 +1086,7 @@
 
     <div class="christmas">
         <div class="message">
-            <h1>Merry</h1>
-            <h1>Christmas!</h1>
+            <h1>Merry Christmas!</h1>
         </div>
         <div class="window ">
             <div class="santa">
